[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "70171_augment"
version = "2.1"
description = "對有label的圖片進行資料擴增。"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/70171toolbox/70171_Augment"
